# BackEndMonitoring

./: .gitignore  BackendMonitoring.sln  BackendMonitoring.vcxproj  BackendMonitoring.vcxproj.filters  CMakeLists.txt  LICENSE  README.md  config.xml  disk.json  log.json  proc.json  service.sh  xgconsole.xml
CLogger/: CLogger.vcxproj  CLogger.vcxproj.filters  CMakeLists.txt
CLogger/include/: GlobalLogger.h  Log.h  stdafx.h
CLogger/include/CLogBuilder/: CLogBuilder.h
CLogger/include/CLogMacro/: CLogCreationMacro.h  CLogEditMacro.h  CLogMacro.h  CLogUsageMacro.h
CLogger/include/CLogMessage/: CLogMessage.h
CLogger/include/CLogger/: CLogger.h
CLogger/include/CLoggerGlobal/: GlobalLogger.h
CLogger/include/ELogConfig/: ELogConfig.h
CLogger/include/ELogFlush/: ELogFlush.h
CLogger/include/ELogLevel/: ELogLevel.h
CLogger/include/Utils/: Utils.h
CLogger/src/: DllMain.cpp
CLogger/src/CLogBuilder/: CLogBuilder.cpp
CLogger/src/CLogger/: CLogger.cpp
CLogger/src/CLoggerGlobal/: GlobalLogger.cpp
CLogger/src/ELogConfig/: ELogConfig.cpp
CLogger/src/ELogFlush/: ELogFlush.cpp
CLogger/src/ELogLevel/: ELogLevel.cpp
CLogger/src/Utils/: Utils.cpp
Client/: CMakeLists.txt
Client/BackEndMonitoringClient/: BackEndMonitoringClient.vcxproj  BackEndMonitoringClient.vcxproj.filters  CMakeLists.txt  ServerData_Client_.txt
Client/BackEndMonitoringClient/include/: CClient.h  CClientController.h  CClientView.h  ERequestType.h  stdafx.h
Client/BackEndMonitoringClient/src/: BackEndMonitoringClient.cpp  CClient.cpp  CClientController.cpp  CClientView.cpp
Client/BackEndMonitoringClientCLI/: BackEndMonitoringClientCLI.vcxproj  BackEndMonitoringClientCLI.vcxproj.filters  CMakeLists.txt  Log.txt  ServerResponses.txt
Client/BackEndMonitoringClientCLI/include/: CClient.h  CClientView.h  CResponseAdapter.h  ClientUtils.h  EClientRequests.h
Client/BackEndMonitoringClientCLI/src/: BackEndMonitoringClientCLI.cpp  CClient.cpp  CClientView.cpp  CResponseAdapter.cpp  ClientUtils.cpp
Client/BackEndMonitoringClientGUI/: BackEndMonitoringClientGUI.pro  CConnectionDialog.cpp  CConnectionDialog.h  CConnectionDialog.ui  CConnectionErrorDialog.cpp  CConnectionErrorDialog.h  CConnectionErrorDialog.ui  CDrivesGraph.cpp  CDrivesGraph.h  CDrivesTab.cpp  CDrivesTab.h  CDrivesTable.cpp  CDrivesTable.h  CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CProcessesGraph.cpp  CProcessesGraph.h  CProcessesTab.cpp  CProcessesTab.h  CProcessesTable.cpp  CProcessesTable.h  CRequestDialog.cpp  CRequestDialog.h  CRequestDialog.ui  ERequestDataType.h  ERequestSelectType.h  main.cpp  stadafx.cpp
Client/BackEndMonitoringClientTests/: BackEndMonitoringClientTests.vcxproj  BackEndMonitoringClientTests.vcxproj.filters  CMakeLists.txt  packages.config
Guid/: CMakeLists.txt  Guid.vcxproj  Guid.vcxproj.filters  Makefile
Server/: BackEndMonitoring.service  CMakeLists.txt
Server/BackEndMonitoringServer/: BackEndMonitoringServer.vcxproj  BackEndMonitoringServer.vcxproj.filters  CFindFileByDateTime.cpp  CMakeLists.txt  CRequestExcAllData.cpp  CRequestExcAllData.h  CRequestExcDiskData.cpp  CRequestExcDiskData.h  CRequestExcProcessData.cpp  CRequestExcProcessData.h  HardwareStatus.cpp  HardwareStatus.h  info.json  packages.config
Server/BackEndMonitoringServer/include/: CCommandLineHandler.h  CContainerOfLogicalDisk.h  CContainerOfProcesses.h  CDrivesInfoJSONDatabase.h  CHardwareInfoLifeCycle.h  CHardwareStatusSpecification.h  CJSONFormatterLogicalDisk.h  CJSONFormatterProcess.h  CLinuxService.h  CLogicalDiskInfo.h  CLogicalDiskInfoMonitoring.h  CLogicalDiskStatus.h  CLogicalDiskStatusLifeCycle.h  CMonitoringInfoJSONDatabase.h  CProcess.h  CProcessInfo.h  CProcessesInfoJSONDatabase.h  CProcessesInfoMonitoring.h  CProcessesMonitoringLifeCycle.h  CRequestExcAllData.h  CRequestExcDiskData.h  CRequestExcProcessData.h  CRequestFrame.h  CResourcesInfoJSONDatabase.h  CService.h  CServiceHandler.h  CThreadPool.h  CWindowsService.h  ContainerOfLogicalDisk.h  EConvertValueFromBytes.h  EMemoryConvertType.h  EMemoryCountType.h  Event.h  HardwareInfoLifeCycle.h  HardwareStatus.h  HardwareStatusSpecification.cpp  HardwareStatusSpecification.h  IHardwareInfoMonitoring.h  IInfoDatabase.h  JSONFormatSaver.h  (+11 more)
Server/BackEndMonitoringServer/src/: BackEndMonitoringServer.cpp  CCommandLineHandler.cpp  CContainerOfLogicalDisk.cpp  CContainerOfProcesses.cpp  CDrivesInfoJSONDatabase.cpp  CHardwareStatusSpecification.cpp  CJSONFormatterLogicalDisk.cpp  CJSONFormatterProcess.cpp  CLinuxService.cpp  CLogicalDiskInfo.cpp  CLogicalDiskInfoMonitoring.cpp  CLogicalDiskStatus.cpp  CLogicalDiskStatusLifeCycle.cpp  CMonitoringInfoJSONDatabase.cpp  CProcess.cpp  CProcessInfo.cpp  CProcessesInfoJSONDatabase.cpp  CProcessesInfoMonitoring.cpp  CProcessesMonitoringLifeCycle.cpp  CRequestExcAllData.cpp  CRequestExcDiskData.cpp  CRequestExcProcessData.cpp  CRequestFrame.cpp  CResourcesInfoJSONDatabase.cpp  CService.cpp  CServiceHandler.cpp  CThreadPool.cpp  CWindowsService.cpp  ContainerOfLogicalDisk.cpp  Event.cpp  HardwareInfoHandler.cpp  JSONFormatSaver.cpp  JSONFormatter.cpp  LogicalDiskStatus.cpp  LogicalDiskStatusHandler.cpp  ThreadPool.cpp  (+6 more)
Server/BackEndMonitoringServerTests/: BackEndMonitoringServerTests.vcxproj  BackEndMonitoringServerTests.vcxproj.filters  CMakeLists.txt  packages.config
Sockets/: BackEndMonitoringSockets.vcxproj  BackEndMonitoringSockets.vcxproj.filters  CMakeLists.txt
Sockets/BackEndMonitoringSockets/: BackEndMonitoringSockets.vcxproj  BackEndMonitoringSockets.vcxproj.filters  CMakeLists.txt  WindowsUtils.cpp
Sockets/BackEndMonitoringSocketsTests/: BackEndMonitoringSocketsTests.vcxproj  BackEndMonitoringSocketsTests.vcxproj.filters
Sockets/PropertySheets/: IncludeSheetDebug64.props
Sockets/include/: CAcceptorWrapper.h
Sockets/src/: CBaseSocket.cpp  CServiceConnectionHandler.cpp  CSocket.cpp
UtilsTests/: CMakeLists.txt  UtilsTests.vcxproj  UtilsTests.vcxproj.filters
UtilsTests/src/: CNumericTypesParserTest.cpp  CStrToNumWrapperTest.cpp  CStringCleanerTest.cpp  CXMLDataReaderTest.cpp  Main.cpp  Tests.cpp
(+243 files in other folders)
